syntax = "proto3";

option go_package = "genproto/user_service/";

package user_service;

import "google/protobuf/empty.proto";

service User_service {
    rpc Users(User)returns(google.protobuf.Empty){}
}


message User{
    string  id = 1; 
	string  name = 2;
	string  phone = 3;  
	int32   age = 4; 
    string  createdAt = 5;
	string  updatedAt = 6;
	string  deletedAt = 7;
}